force-app/main/default/objects/Contact/fields/FOPS_Available_From__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Available_From__c</fullName>
    <label>Available From</label>
    <type>Date</type>
</CustomField>