force-app/main/default/objects/Contact/fields/FOPS_Capacity_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Capacity_Hours_Per_Week__c</fullName>
    <label>Capacity Hours Per Week</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>