force-app/main/default/objects/Contact/fields/FOPS_Consultant_Status__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Consultant_Status__c</fullName>
    <label>Consultant Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Partially Allocated</fullName>
            </value>
            <value>
                <fullName>Fully Allocated</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Offboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>