force-app/main/default/objects/Contact/fields/FOPS_Consultant_Type__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Consultant_Type__c</fullName>
    <label>Consultant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Sub-contractor</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>