force-app/main/default/objects/Contact/fields/FOPS_Contact_Role_Type__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Contact_Role_Type__c</fullName>
    <label>Contact Role Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR / Recruiter</fullName>
            </value>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Tech Lead</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>