force-app/main/default/objects/Contact/fields/FOPS_Country__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Country__c</fullName>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>