force-app/main/default/objects/Contact/fields/FOPS_Default_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Default_Cost_Rate__c</fullName>
    <description>CONFIDENTIAL - hidden from FOPS_Consultant permission set.</description>
    <label>Default Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>