force-app/main/default/objects/Contact/fields/FOPS_Responsiveness__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Responsiveness__c</fullName>
    <label>Responsiveness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fast</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Slow</fullName>
            </value>
            <value>
                <fullName>Ghost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>