force-app/main/default/objects/Contact/fields/FOPS_Timezone__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Timezone__c</fullName>
    <label>Timezone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>