force-app/main/default/objects/Contact/fields/FOPS_User__c.field-meta.xml
<CustomField>
    <fullName>FOPS_User__c</fullName>
    <inlineHelpText>Null for sub-contractors without a licence.</inlineHelpText>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Consultant Records</relationshipLabel>
    <relationshipName>FOPS_ConsultantRecords</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>