force-app/main/default/objects/Contact/fields/FOPS_Utilisation_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Utilisation_Current_Month__c</fullName>
    <label>Utilisation This Month</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>